# ARMusic

./: .gitignore  README.md  package-lock.json  package.json
android/: LMedia_VERSION.md  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/component/: build.gradle.kts
android/gradle/: libs.versions.toml
android/lalbum/: build.gradle.kts
android/lartist/: build.gradle.kts
android/lfolder/: build.gradle.kts
android/lhistory/: build.gradle.kts
android/lmedia/: build.gradle.kts  proguard-rules.pro
android/lmusic-exporter/: build.gradle.kts
android/lplaylist/: build.gradle.kts
app/: config.py  lyrics_fetcher.py  main.py  ui.py
desktop/: README.md  index.html  package.json  tsconfig.node.json  vite.config.ts
desktop/electron/: dev.mjs  library.cjs  main.cjs  preload.cjs  syncServer.cjs
desktop/scripts/: clean-dist.mjs
desktop/src/: App.tsx  GroupedLibraryView.css  TrayPlayer.tsx  (+8 more)
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/assets/: armusic-rename-exchange-arm64
desktop/src-tauri/capabilities/: default.json  tray.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/native/: rename_exchange.c
desktop/src-tauri/src/: adb_sync.rs  listening_history.rs  main.rs  playlists.rs  sync_identity.rs  tag_editor.rs  tray_player.rs  wishlist.rs
docs/: android-notes.md  armusic-1.3.7-architecture.md  roadmap.md  sync-protocol.md
ios/: README.md
scripts/: android-armusic-build.ps1  android-debug-build.ps1  tauri-build-signed.ps1
(+302 files in other folders)
