[package]
name = "armusic"
version = "1.0.0"
description = "ARMusic desktop"
authors = ["ARMusic"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
chrono = "0.4"
local-ip-address = "0.6"
percent-encoding = "2"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = ["protocol-asset"] }
tiny_http = "0.12"
