[package]
name = "armusic"
version = "1.5.0"
description = "ARMusic desktop"
authors = ["ARMusic"]
edition = "2021"
default-run = "armusic"

[build-dependencies]
ico = "0.5"
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
chrono = "0.4"
getrandom = "0.3"
local-ip-address = "0.6"
lofty = "0.24"
percent-encoding = "2"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-single-instance = "2"
tiny_http = "0.12"
wait-timeout = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Security", "Win32_Storage_FileSystem", "Win32_System_Registry"] }
